# thumbs.248.no

./: .gitignore  Cargo.toml  Containerfile  README.md  cubbyfile.dev.toml
.github/workflows/: deploy.yml  test.yml
docs/: Redirector.json
populate/: Cargo.toml  README.md
populate/src/: main.rs
src/: log.rs  main.rs  quality.rs  storage.rs
templates/: index.html
tests/: quality_is_best.rs
