[package]
name = "thumbs-248-no"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
chrono = "0.4.42"
dotenv = "0.15.0"
redis = "1.0.1"
regex = "1.11.2"
reqwest = "0.12.23"
rust-s3 = "0.37.1"
tokio = { version = "1.47.1", features = ["full"] }
tower-http = { version = "0.6.0", features = ["cors"] }
